Changing the images and other sections

--- a/frontend/client/style/style.scss
+++ b/frontend/client/style/style.scss
@@ -2762,12 +2762,12 @@ a.logo {
   display: block;
   width: 103px;
   height: 37px;
-  background: url(logo-oasis.png);
+  background: url(crowdchat_logo_with_bkd.png);
   background-size: 103px 37px;
 }
 
 a.logo:hover {
-  background-image: url(logo-oasis-hover.png);
+  background-image: url(crowdchat_logo_with_bkd.png);
 }
 
 .btn.disabled, .btn[disabled], fieldset[disabled] .btn {
